add the node metrci api
