# swagger/swagger.json
@@ -311,15 +311,12 @@
                     "clusters/:cluster/namespaces/:namespace/containers"
                 ],
                 "description": "query pod metric",
-                "operationId": "ContainerController.GetMetric server",
+                "operationId": "ContainerController.GetConatainerMetric server",
                 "responses": {
                     "200": {
                         "description": "",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Container"
-                            }
+                            "$ref": "#/definitions/.map[string]interface{}"
                         }
                     }
                 }
@@ -405,10 +402,13 @@
                     "clusters/:cluster/namespaces/:namespace/services"
                 ],
                 "description": "Get service Metric",
-                "operationId": "ServiceController.GetMetric server",
+                "operationId": "ServiceController.GetServiceMetric server",
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/.map[string]interface{}"
+                        }
                     }
                 }
             }
@@ -529,6 +529,23 @@
                         "description": "",
                         "schema": {
                             "$ref": "#/definitions/models.Node"
+                        }
+                    }
+                }
+            }
+        },
+        "/clusters/{cluster}/nodes/{name}/metrics": {
+            "get": {
+                "tags": [
+                    "clusters/:cluster/nodes"
+                ],
+                "description": "get node metric",
+                "operationId": "NodeController.GetNodeMetric server",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/.map[string]interface{}"
                         }
                     }
                 }
@@ -870,6 +887,9 @@
             "type": "object"
         },
         ".Time": {
+            "type": "object"
+        },
+        ".map[string]interface{}": {
             "type": "object"
         },
         ".map[string]string": {
